--- a/order.html
+++ b/order.html
@@ -16,7 +16,8 @@
 
     </div>
  </div>   
-<h1 class="h1-1">Month of Allah Almighty is coming!</h1>
+<h1 class="h1-1">Month of Allah is coming!
+    كل عام وانتم بخير </h1>
 <h2 class="h2-2">Month of bless!</h2>
 <!-- <button class="bt">CALENDER OF RAMAZAN</button> -->
 <h1 class="top">CALENDER OF RAMADAN</h1>
@@ -216,7 +217,7 @@
 
 </table>
 </center>
-<h2 class="top">MADE BY: QAISAR ABBAS.</h2>
+<h2 class="top">MADE BY: ManarAdel.</h2>
 
 
 
