--- a/order.html
+++ b/order.html
@@ -25,10 +25,10 @@
 <center>
 <table class="calender">
 <tr>
-<th class="head" colspan="2" cell-padding="10">Roza</th>
-<th class="head" colspan="2" cell-padding="10">Date</th>
-<th class="head" colspan="3" cell-padding="10">Sehr</th>
-<th class="head" colspan="3" cell-padding="10">Iftar</th>
+<th class="head" colspan="2" cell-padding="10">التاريخ الهجري </th>
+<th class="head" colspan="2" cell-padding="10"> التاريخ الميلادي  </th>
+<th class="head" colspan="3" cell-padding="10">سحور </th>
+<th class="head" colspan="3" cell-padding="10">الافطار </th>
 </tr></hr>
 <tr>
     <td class="aa" colspan="2" cell-padding="10">01</td>
